--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "github-bot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
-  "license": "ISC",
-  "author": "",
+  "license": "MIT",
+  "private": true,
+  "author": "SALTWOOD",
   "type": "module",
   "main": "index.js",
   "scripts": {
